--- a/src/layout/profilePageTemplate/profilePageTemplate.pug
+++ b/src/layout/profilePageTemplate/profilePageTemplate.pug
@@ -117,7 +117,7 @@ html(lang="ru")
                                                             .subject__container.subject__container__disabled
                                                                 .subject__icon
                                                                     img(src=`${special.ico_disable}`)
-                                                                .subject__name
+                                                                .subject__name.subject__name__disabled
                                                                     =special.title
 
 
