added link to compare page in header

--- a/src/layout/header/header.pug
+++ b/src/layout/header/header.pug
@@ -4,5 +4,5 @@ div.header__top
             include ../../../assets/icons/header_arrow.svg
         a(href='https://www.mirea.ru/', target="_blank").header__logo
             img(src='/assets/images/mirea-logo.svg' alt='MIREA-logo')
-        a(href=`/compare`).header__compare#HeaderCompare
+        a(href=`${headerLink}`).header__compare#HeaderCompare
             include ../../../assets/icons/header_compare.svg
