--- a/src/layout/profilePageTemplate/profilePageTemplate.pug
+++ b/src/layout/profilePageTemplate/profilePageTemplate.pug
@@ -12,7 +12,7 @@ html(lang="ru")
         script(src='../js/profilePageTemplate/profilePageTemplate.js', type='module')
         script(src='../js/header/header.js', type='module')
         link(rel="stylesheet" href="../swiper/swiper-bundle.min.css")
-        link(rel="stylesheet" href="../style.scss")
+        link(rel="stylesheet" href="../commonStyles.scss")
         link(rel="stylesheet" href="../layout/profilePageTemplate/profilePageTemplate.scss")
         link(rel="stylesheet" href="../layout/header/header.scss")
         link(rel="stylesheet" href="../layout/footer/footer.scss")
@@ -110,13 +110,13 @@ html(lang="ru")
                                                         if(special.isActive)
                                                             .subject__container
                                                                 .subject__icon
-                                                                    img(src=`${special.ico}`)
+                                                                    img(src=`${special.ico}`, loading="lazy")
                                                                 .subject__name
                                                                     =special.title
                                                         else
                                                             .subject__container.subject__container__disabled
                                                                 .subject__icon
-                                                                    img(src=`${special.ico_disable}`)
+                                                                    img(src=`${special.ico_disable}`, loading="lazy")
                                                                 .subject__name.subject__name__disabled
                                                                     =special.title
 
