--- a/src/index.pug
+++ b/src/index.pug
@@ -13,7 +13,7 @@ html(lang="ru")
         script(src='./styles.js', type='module')
         script(src='./scripts.js', type='module')
     body
-        header.header
+        header
             include ./layout/header/header.pug
             include ./layout/main/main.pug
         main
