--- a/src/layout/header/header.pug
+++ b/src/layout/header/header.pug
@@ -1,8 +1,11 @@
 div.header__top
-    .header__inner
-        button(onclick=`history.back()`).header__back.header__hidden#HeaderBack
-            include ../../../assets/icons/header_arrow.svg
-        a(href='https://www.mirea.ru/', target="_blank").header__logo
-            img(src='/assets/images/mirea-logo.svg' alt='MIREA-logo')
-        a(href=`${headerLink}`).header__compare#HeaderCompare
-            include ../../../assets/icons/header_compare.svg
+    .header__outer
+        .header__inner
+            button(onclick=`history.back()`).header__back.header__hidden#HeaderBack
+                include ../../../assets/icons/header_arrow.svg
+            a(href='https://www.mirea.ru/', target="_blank").header__logo
+                img(src='/assets/images/mirea-logo.svg' alt='MIREA-logo')
+            a(href=`${headerLink}`).header__compare#HeaderCompare
+                div.header__badge.header__badge__hidden
+                    | 2
+                include ../../../assets/icons/header_compare.svg
