added logic for badge at header

--- a/src/layout/header/header.pug
+++ b/src/layout/header/header.pug
@@ -5,7 +5,7 @@ div.header__top
                 include ../../../assets/icons/header_arrow.svg
             a(href='https://www.mirea.ru/', target="_blank").header__logo
                 img(src='/assets/images/mirea-logo.svg' alt='MIREA-logo')
-            a(href=`${headerLink}`).header__compare#HeaderCompare
-                div.header__badge.header__badge__hidden
+            a(href=`${headerLink}`).header__compare
+                div.header__badge.header__badge__hidden#HeaderCompare
                     | 2
                 include ../../../assets/icons/header_compare.svg
