--- a/src/layout/profilePageTemplate/profilePageTemplate.pug
+++ b/src/layout/profilePageTemplate/profilePageTemplate.pug
@@ -82,7 +82,7 @@ html(lang="ru")
                                                         | Важно:
                                                         |
                                                     =item.important
-                                                button(class=`${item.className} card__button`, onclick=`handleAppendProfile('${item.profileName}')`)#CompareButton
+                                                button(class=`${item.className} card__button`, onclick=`handleAppendProfile('${item.profileName}')`)
                                                     | Добавить к сравнению
                                         .card__subject
                                             h2.card__topic
