--- a/src/compare/compare.scss
+++ b/src/compare/compare.scss
@@ -5,6 +5,7 @@
 
     & .compare__title {
         @include h1();
+        margin-bottom: 75px;
     }
 
     & .compare__container {
@@ -22,6 +23,135 @@
             & .compare__link {
                 margin: 0 auto;
                 @include cta-button();
+            }
+        }
+    }
+
+    & .compare__layout {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-column-gap: 30px;
+
+        & .compare__card {
+            background-color: white;
+            padding: 35px;
+            border-radius: 15px;
+
+            & .compare__name {
+                @include h3-bold();
+            }
+
+            & .compare__header {
+                display: grid;
+                grid-template-columns: 1fr 18px;
+                grid-column-gap: 10px;
+                margin-bottom: 15px;
+
+                & svg {
+                    cursor: pointer;
+                    position: relative;
+                    top: 5px;
+                    & path {
+                        transition: all 0.4s ease;
+                    }
+                    &:hover {
+                        & path {
+                            stroke: #FF4E4E;
+                            stroke-opacity: 1;
+                        }
+                    }
+                }
+            }
+
+            & .compare__course {
+                @include paragraph-regular();
+                color: $paragraph-black-05;
+                margin-bottom: 5px;
+            }
+
+            & .compare__cipher {
+                @include paragraph-regular();
+                color: $paragraph-black-05;
+                margin-bottom: 35px;
+            }
+
+            & .compare__item {
+                margin-bottom: 35px;
+
+                & .compare__name {
+                    @include h3-bold();
+                    margin-bottom: 15px;
+                }
+
+                & .compare__text {
+                    @include paragraph-regular();
+                }
+
+                & .compare__exam {
+                    @include flexible();
+                    margin-bottom: 17px;
+
+                    & .compare__ico {
+                        display: block;
+                        margin-right: 20px;
+                    }
+
+                    &:last-child {
+                        margin-bottom: 0;
+                    }
+                }
+            }
+
+            & .compare__link {
+                display: inline-block;
+                @include paragraph-regular();
+                color: $primary-color;
+                padding-bottom: 5px;
+                border-bottom: 1px solid $primary-color;
+                transition: all 0.4s ease;
+                &:hover {
+                    color: $primary-color-hover;
+                    border-bottom: 1px solid $primary-color-hover;
+                }
+                &:active {
+                    color: $primary-color-active;
+                    border-bottom: 1px solid $primary-color-active;
+                }
+                margin-bottom: 50px;
+            }
+
+            & .compare__subjects {
+                margin-top: 25px;
+                display: grid;
+                grid-template-columns: repeat(4, 1fr);
+                grid-gap: 15px 5px;
+                justify-content: center;
+                align-items: flex-start;
+
+                .compare__subject {
+                    width: 120px;
+                    .compare__subjectIcoContainer {
+                        width: 100px;
+                        height: 100px;
+                        background: radial-gradient(73.81% 92.33% at 8.65% 12.15%, #65BFFF 0%, #FF6FCE 100%);
+                        border-radius: 10px;
+                        @include flexible();
+                        justify-content: center;
+                        margin: 0 auto 10px;
+
+                        & .compare__subjectIco {
+                            display: block;
+                        }
+                    }
+
+                    .compare__subjectName {
+                        font-size: 12px;
+                        line-height: 14px;
+                        text-align: center;
+                        color: $paragraph-black;
+                        word-wrap: break-word;
+                    }
+                }
             }
         }
     }
