--- a/src/layout/header/header.pug
+++ b/src/layout/header/header.pug
@@ -5,6 +5,6 @@ div.header__top
                 include ../../../assets/icons/header_arrow.svg
             a(href='/').header__logo
                 img(src='/assets/images/mirea-logo.svg' alt='MIREA-logo')
-            a(href=`${headerLink}.pug`).header__compare
+            a(href=``).header__compare#CompareLink
                 div.header__badge.header__badge__hidden#HeaderCompare
                 include ../../../assets/icons/header_compare.svg
