fixed background at compare page

--- a/src/compare/compare.pug
+++ b/src/compare/compare.pug
@@ -16,7 +16,7 @@ html(lang="ru")
     body
         header
             include ../layout/header/header
-        main.compare.compare__background__top
+        main.compare.compare__background__top#CompareBackground
             h1.compare__title
                 | Сравнение профилей
             section.compare__container#CompareContainer
