--- a/src/layout/main/main.scss
+++ b/src/layout/main/main.scss
@@ -12,8 +12,9 @@
         @include absoluteCenter();
         z-index: 1;
         height: 72vh;
-        max-width: 85vw;
-      }
+        max-height: 72vh;
+        max-width: 72vw;
+    }
 
     & .header__information {
         position: relative;
@@ -59,6 +60,10 @@
 
 @media (max-width: 992px) {
     .header__container {
+
+        & .header__logo {
+            height: auto;
+        }
 
         & .header__information {
             & .header__title {
